set max width on main

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,12 @@ html {
 
 }
 
+main {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 #contact, #nonsense, #credits { 
     scroll-margin-top: 100px; 
  }
+
