--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,19 +3,76 @@
 @tailwind utilities;
 
 html {
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
 }
 
 main {
-    max-width: 1000px;
-    margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-#contact, #nonsense, #credits { 
-    scroll-margin-top: 100px; 
- }
+#contact,
+#nonsense,
+#credits {
+  scroll-margin-top: 100px;
+}
 
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-size: 16px;
+
+}
+
+
+.netflix-slider .swiper-wrapper {
+  padding: 20px 0;
+}
+
+.netflix-slider .swiper-slide {
+  -webkit-transition: 250ms all;
+  transition: 250ms all;
+}
+
+.netflix-slider .swiper-slide:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  z-index: 1;
+}
+
+.netflix-slider .swiper-slide:first-of-type:hover .excerpt {
+  padding-left: 20px;
+}
+
+
+
+.fixed-height {
+  height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.excerpt {
+  display: none;
+}
+
+.netflix-slider .swiper-slide:hover .excerpt {
+  display: block;
+  font-size: 12px;
+}
