--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Gogh';
+  src: url('../fonts/Gogh-ExtraBold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
@@ -19,12 +26,6 @@ main {
 #nonsense,
 #credits {
   scroll-margin-top: 100px;
-}
-
-html,
-body {
-  position: relative;
-  height: 100%;
 }
 
 
