--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,3 +77,12 @@ main {
   font-size: 12px;
 }
 
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid gray;
+}
