--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,5 +79,15 @@ main {
   transform: translate(-50%, -50%);
   background-color: white;
   border: 1px solid gray;
-  z-index: 10;
+  z-index: 100;
+}
+
+.overlay {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 50; 
 }
