--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,8 @@
 }
 
 @font-face {
-  font-family: 'Karla';
-  src: url('../fonts/Karla/static/Karla-Regular.ttf') format('truetype');
+  font-family: 'Merriweather';
+  src: url('../fonts/Merriweather/Merriweather-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
