--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,14 +17,10 @@
 }
 
 
-
-
 html {
-  scroll-behavior: smooth;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
 main {
@@ -32,8 +28,19 @@ main {
   margin: 0 auto;
 }
 
+.dots-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around; /* Adjust as necessary to control spacing */
+}
 
-
+.dot {
+  position: relative;
+  width: 8px; /* Size of the dot */
+  height: 8px; /* Size of the dot */
+  background-color: #39ff14; /* Bright green color */
+  border-radius: 50%; /* Rounds the corners into a circular shape */
+}
 .swiper-container {
   width: 100%;
   height: 100%;
@@ -92,6 +99,7 @@ main {
   z-index: 100;
 }
 
+/* 
 .overlay {
   position: fixed; 
   top: 0;
@@ -100,4 +108,4 @@ main {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5); 
   z-index: 50; 
-}
+} */
