--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,19 +28,15 @@ main {
   margin: 0 auto;
 }
 
-.dots-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around; /* Adjust as necessary to control spacing */
-}
 
 .dot {
   position: relative;
-  width: 8px; /* Size of the dot */
-  height: 8px; /* Size of the dot */
-  background-color: #39ff14; /* Bright green color */
-  border-radius: 50%; /* Rounds the corners into a circular shape */
+  width: 8px; 
+  height: 8px; 
+  background-color: #39ff14; 
+  border-radius: 50%; 
 }
+
 .swiper-container {
   width: 100%;
   height: 100%;
@@ -92,14 +88,13 @@ main {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 80%;
   transform: translate(-50%, -50%);
   background-color: white;
-  border: 1px solid gray;
+  border: 2px solid gray;
   z-index: 100;
 }
 
-/* 
+
 .overlay {
   position: fixed; 
   top: 0;
@@ -108,4 +103,4 @@ main {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5); 
   z-index: 50; 
-} */
+}
