--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,3 +104,11 @@ main {
   background-color: rgba(0, 0, 0, 0.5); 
   z-index: 50; 
 }
+
+footer svg:hover {
+  fill: white;
+}
+
+footer path:hover {
+  fill: white;
+}
