--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,8 +10,8 @@
 }
 
 @font-face {
-  font-family: 'Merriweather';
-  src: url('../fonts/Merriweather/Merriweather-Regular.ttf') format('truetype');
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
