add hover to dark mode toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,6 @@ main {
 
 }
 
-
 .credits-slider .swiper-wrapper {
   padding-top: 20px;
 }
@@ -89,7 +88,6 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   z-index: 100;
 }
 
@@ -109,5 +107,10 @@ footer svg:hover {
 }
 
 footer path:hover {
+  fill: white;
+}
+
+
+nav path:hover {
   fill: white;
 }
