--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @font-face {
   font-family: 'Gogh';
   src: url('../fonts/Gogh/Gogh-ExtraBold.woff2') format('woff2');
@@ -9,12 +12,6 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto/RobotoCondensed-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
 
 
 html {
