--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -95,8 +95,19 @@ main {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 50;
+  z-index: 5;
 }
+
+.black-overlay {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 1);
+  z-index: 5; 
+}
+
 
 footer svg:hover {
   fill: white;
