change body font to karla

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,8 +12,8 @@
 }
 
 @font-face {
-  font-family: 'GFS';
-  src: url('../fonts/GFS/GFSNeohellenic-Regular.woff2') format('woff2');
+  font-family: 'Karla';
+  src: url('../fonts/Karla/Karla-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
