--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,3 +129,40 @@ footer path:hover {
 .svg-dark {
   fill: #000000;
 }
+
+
+.banner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  display: flex;
+  font-family: 'Gogh', sans-serif;
+  justify-content: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  animation: slide-down 0.8s ease-in-out;
+  z-index: 1000;
+  align-items: center;
+  border: rgb(134 101 202) 4px solid;
+}
+
+@keyframes slide-down {
+  from {
+    top: -100px;
+  }
+  to {
+    top: 0;
+  }
+}
+
+.close-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
