--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,10 +143,20 @@ footer path:hover {
   justify-content: center;
   font-size: 1.2em;
   text-transform: uppercase;
-  animation: slide-down 0.8s ease-in-out;
   z-index: 1000;
   align-items: center;
   border: rgb(134 101 202) 4px solid;
+  transition: top 0.8s ease-in-out;
+}
+
+.slide-down {
+  top: 0;
+  animation: slide-down 0.8s ease-in-out;
+}
+
+.slide-up {
+  top: -100px;
+  animation: slide-up 0.8s ease-in-out;
 }
 
 @keyframes slide-down {
@@ -155,6 +165,15 @@ footer path:hover {
   }
   to {
     top: 0;
+  }
+}
+
+@keyframes slide-up {
+  from {
+    top: 0;
+  }
+  to {
+    top: -100px;
   }
 }
 
